package Model;

import java.time.LocalDateTime;

public class Actions {
    private String description;
    private LocalDateTime timeStamp;

}
