package Model;

public class Admin extends User implements Show{
    
    
}
