package Model;

public enum Rol {
    ADMIN,
    GENERIC
}
