package Model;

public interface Show {
    public void showAction();
}
