package Model;

public class User implements Show {
    private String id;
    private String name;
    private String userName;
    private String password;
    private Rol rol;

    @Override
    public void showAction() {
        // TODO Auto-generated method stub
        
    }


}
