@startuml Gestion_Clientes
class Sistema{
    
}
 class User{
    String id
    String name
    String userName
    String password
    Rol rol
    Acciones[] acciones

    udpdateUser()
}
interface Show{
    showActions()
}
class Admin{
    createUser()
    searchUser()
    deleteUser()
    unlockUser()
}

enum Rol{
    ADMINISTRADOR
    ESTÁNDAR
}
class Actions{
    String descripcion
    Date fechaAccion

    mostrarHistorial()
}

'Relaciones entre clases.
Sistema o-- User
User --> Rol : rol
User o-- Admin 
User *-- Actions
User <|-- Admin
User ..|> Show : implementa
Admin ..|> Show : implementa


@enduml